--- a/chart_wl_max.html
+++ b/chart_wl_max.html
@@ -47,6 +47,7 @@ function downsize_chart(data, selector, title) {
                     .attr('y', 80)
                         .attr('text-anchor', 'middle')
                             .attr('class', 'chart-title')
+                            .style("font-size","34px")
                                 .text(title);
             //Update the chart when window resizes.
             nv.utils.windowResize(function() { chart.update() });
